# standard

./: pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  cis-compliance.yml  cis-org-compliance.yml  compliance.yml  cpp-quality.yml  gatekeeper-checks.yml  infra-lint.yml  install-test.yml  pre-commit.yml  pull-request-feedback.yml  python-quality.yml  sast-python.yml  sbom.yml  scheduled-health.yml  scorecard.yml  trend-dashboard.yml  version-check.yml  version-sync.yml
